tests/snapshots/integration__integration_tests__jj__jj_switch_create_with_execute.snap
---
source: tests/integration_tests/jj.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - exec-ws
    - "--execute"
    - echo hello
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
hello

----- stderr -----
[32m✓[39m [32mCreated workspace [1mexec-ws[22m @ [1m_REPO_.exec-ws[22m[39m
[2m↳[22m [2mTo enable automatic cd, run [90mwt config shell install[39m[22m
[36m◎[39m [36mExecuting (--execute) @ [1m_REPO_.exec-ws[22m:[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m hello
